ros2_ws/log/build_2025-03-18_17-17-15/lane_detector/stderr.log
  File "/home/crofi/ros2_ws/install/lane_detector/lib/python3.10/site-packages/lane_detector/lane_detector.py", line 89
    cv2.imshow('line detection',cv image)
                                ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

